Refactoring...also got rid of typescript stuff for now because bugs. Some spacing tweaks.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Revue-Thin";
-    src: url("../fonts/AGRevueCyr-Roman-Medium.ttf")
+    src: url("./fonts/AGRevueCyr-Roman-Medium.ttf")
 }
 
 html {
@@ -155,6 +155,7 @@ footer {
 #results {
     color: gray;
     font-size: 16px;
+    margin-bottom: 10px;
 }
 
 
